<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_body">Note</string>
    <string name="note_title">Title</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="add_note">Add Note</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="clear_all">Clear all</string>
</resources>