<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="todoListViewModel"
            type="com.stanroy.todolistapp.ui.todolist.TodoListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="8dp"
        tools:context=".ui.todolist.TodoListFragment">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTodoNotes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_note"
            android:onClick="@{() -> todoListViewModel.navigateToNoteFragment()}"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/pink_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

        <Button
            android:id="@+id/floatingActionButtonDelete"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:contentDescription="@string/delete_all_notes"
            android:onClick="@{() -> todoListViewModel.clearAll()}"
            android:src="@drawable/ic_add"
            android:text="@string/clear_all"
            android:textSize="10sp"
            app:backgroundTint="@color/pink_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>