<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="todoNoteViewModel"
            type="com.stanroy.todolistapp.ui.todonote.TodoNoteViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".ui.todonote.TodoNoteFragment">


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/note_title"
            android:textColor="@color/black"
            android:textSize="@dimen/note_header_text_size"
            app:layout_constraintBottom_toTopOf="@+id/etTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/note_body"
            android:textColor="@color/black"
            android:textSize="@dimen/note_header_text_size"
            app:layout_constraintBottom_toTopOf="@+id/etBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/grey"
            android:ems="10"
            android:inputType="text"
            android:text="@={todoNoteViewModel.noteTitle}"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/tvBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <EditText
            android:id="@+id/etBody"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="16sp"
            android:text="@={todoNoteViewModel.noteBody}"
            app:layout_constraintBottom_toTopOf="@+id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBody" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> todoNoteViewModel.navigateToList()}"
            android:text="@string/btn_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etBody" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:onClick="@{() -> todoNoteViewModel.upsert()}"
            android:text="@string/btn_save"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>